--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="heading">Password Generator</h1>
+        <h1 class="heading">Generate Password</h1>
         <div class="generator">
             <div class="password">
                 <input type="text" value="test">
